fixed input focus out of bounds issue

--- a/01-accessibility-rating-component/src/index.css
+++ b/01-accessibility-rating-component/src/index.css
@@ -122,8 +122,8 @@ button:hover {
 }
 
 .rating-container label {
-  padding-right: 20px;
-  padding-top: 3px;
+  z-index: 10;
+  padding-top: 5px;
 }
 
 .rating-container .interaction-bg:hover input[type="radio"]:after {
@@ -132,18 +132,28 @@ button:hover {
   font-weight: 700;
 }
 
+label {
+  position: relative;
+}
+
 input[type="radio"] {
   cursor: pointer;
+  position: absolute;
+  left: 16px;
+  right: 16px;
+  top: 16px;
+  bottom: 16px;
+  z-index: -1;
 }
 
 input[type="radio"]:after {
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
+  width: 13px;
+  height: 13px;
+  top: -3px;
+  left: -5px;
   position: relative;
   background-color: var(--interaction-bg);
+  /* background-color: pink; */
   content: "";
   display: inline-block;
   visibility: visible;
@@ -151,11 +161,10 @@ input[type="radio"]:after {
 }
 
 input[type="radio"]:checked:after {
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
+  width: 13px;
+  height: 13px;
+  top: -3px;
+  left: -5px;
   position: relative;
   background-color: white;
   content: "";
